# cel-java

./: MODULE.bazel  testing.bzl
.github/workflows/: cross_artifact_dependencies_check.sh
bundle/src/main/java/dev/cel/bundle/: BUILD.bazel  CelBuilder.java  CelImpl.java
bundle/src/test/java/dev/cel/bundle/: CelImplTest.java
checker/src/main/java/dev/cel/checker/: CelStandardDeclarations.java
common/: BUILD.bazel
common/ast/: BUILD.bazel
common/navigation/: BUILD.bazel
common/src/main/java/dev/cel/common/: BUILD.bazel
common/src/main/java/dev/cel/common/ast/: BUILD.bazel
common/src/main/java/dev/cel/common/navigation/: BUILD.bazel
common/src/main/java/dev/cel/common/values/: BUILD.bazel  BaseProtoMessageValueProvider.java
extensions/src/main/java/dev/cel/extensions/: CelComprehensionsExtensions.java
optimizer/src/main/java/dev/cel/optimizer/optimizers/: BUILD.bazel  ConstantFoldingOptimizer.java
optimizer/src/test/java/dev/cel/optimizer/optimizers/: BUILD.bazel  ConstantFoldingOptimizerTest.java
policy/src/main/java/dev/cel/policy/: CelPolicy.java  CelPolicyYamlParser.java  PolicyParserContext.java
policy/src/test/java/dev/cel/policy/: CelPolicyYamlParserTest.java
publish/: BUILD.bazel
runtime/: BUILD.bazel
runtime/planner/: BUILD.bazel
runtime/src/main/java/dev/cel/runtime/: BUILD.bazel  CelLiteRuntimeBuilder.java  CelRuntimeBuilder.java  CelRuntimeImpl.java  CelRuntimeLegacyImpl.java  LiteRuntimeImpl.java
runtime/src/main/java/dev/cel/runtime/planner/: BUILD.bazel  MissingAttribute.java  PresenceTestQualifier.java  StringQualifier.java
runtime/src/test/java/dev/cel/runtime/: AbstractPlannerInterpreterTest.java  BUILD.bazel  CelLiteInterpreterTest.java  CelLiteRuntimeAndroidTest.java  CelLiteRuntimeTest.java  PlannerInterpreterTest.java
testing/src/test/resources/policy/verification/: flawed_policy.yaml  multi_invariant_policy.yaml  restricted_destinations_policy.yaml  secure_resource_access.yaml  workload_admission_fixed.yaml  workload_admission_flawed.yaml
verifier/: BUILD.bazel  README.md
verifier/axioms/: BUILD.bazel
verifier/src/main/java/dev/cel/verifier/: BUILD.bazel  CelAstAlphaHasher.java  CelAstToZ3Translator.java  CelPolicyVerifier.java  CelPolicyVerifierBuilder.java  CelPolicyVerifierFactory.java  CelPolicyVerifierImpl.java  CelVerificationException.java  CelVerificationResult.java  CelVerifier.java  CelVerifierBuilder.java  CelVerifierFactory.java  CelVerifierZ3Impl.java  CelZ3CounterexampleGenerator.java  CelZ3ExtensionalityAxioms.java  CelZ3FunctionRegistry.java  CelZ3OperatorTranslator.java  CelZ3TypeSystem.java  TranslatedValue.java
verifier/src/main/java/dev/cel/verifier/axioms/: AddAxiom.java  AxiomHelpers.java  BUILD.bazel  CelZ3FunctionAxiom.java  CelZ3OverloadResult.java  CelZ3OverloadTranslator.java  CelZ3StandardAxioms.java  DivideAxiom.java  GreaterAxiom.java  GreaterEqualsAxiom.java  InAxiom.java  LessAxiom.java  LessEqualsAxiom.java  MapInsertAxiom.java  ModuloAxiom.java  MultiplyAxiom.java  NegateAxiom.java  OptionalAxioms.java  SizeAxiom.java  StringAxioms.java  SubtractAxiom.java  TypeAxiom.java  TypeConversionAxioms.java
verifier/src/test/java/dev/cel/verifier/: BUILD.bazel  CelPolicyVerifierImplTest.java  CelVerifierZ3ImplTest.java  VerifierTestHelper.java
