load("@rules_java//java:defs.bzl", "java_library")
load("//:cel_android_rules.bzl", "cel_android_library")

package(
    default_applicable_licenses = ["//:license"],
    default_visibility = ["//visibility:public"],
)

java_library(
    name = "common",
    exports = ["//common/src/main/java/dev/cel/common/navigation:common"],
)

java_library(
    name = "navigation",
    exports = ["//common/src/main/java/dev/cel/common/navigation"],
)

cel_android_library(
    name = "navigation_android",
    exports = ["//common/src/main/java/dev/cel/common/navigation:navigation_android"],
)

java_library(
    name = "mutable_navigation",
    exports = ["//common/src/main/java/dev/cel/common/navigation:mutable_navigation"],
)
